added review order info before place order

--- a/products/templates/products/buy_products.html
+++ b/products/templates/products/buy_products.html
@@ -88,14 +88,24 @@
             </div>
             <div class="container-info container-review-info">
                 <h2 class="container-title page-header">Plaseaza comanda</h2>
-                <div class="container-content">
-                    <div class="">
-                        <label for="conditions">
+                <div class="container-content" style="position: relative !important;">
+                    <div style="background-color: white;margin-top: 2rem;border-radius:30px;border-style: ridge;">
+                        <h3 style="padding-left: 4rem;">Vizualizare informatii</h3>
+                        <div style="padding-left: 3rem; ">
+                            <p class="c-black fs-16">Nume: <span class="c-black fs-16">George Sigoiu</span></p>
+                            <p class="c-black fs-16">Telefon: <span class="c-black fs-16">0721005617</span></p>
+                            <p class="c-black fs-16">Email: <span class="c-black fs-16">georgesigoiu1@gmail.com</span></p>
+                            <p class="c-black fs-16">Adresa livrare: <span class="c-black fs-16">adresa unde se livreaza</span></p>
+                            <p class="c-black fs-16"> <strong class="c-black fs-16"> Suma de platit: <span class="c-black fs-16">100 lei</span></strong></p>
+                        </div>
+                    </div>
+                    <div>
+                        <label>
                             <input type="checkbox" name="conditions" id="site-conditions">
                             Accept termenii si conditiile!
                         </label>
                         <br>
-                        <label for="newsletter">
+                        <label>
                             <input type="checkbox" name="newsletter" id="subscribe-newsletter">
                             Vreau sa ma abonez la newsletter!
                         </label>
