--- a/templates/main.html
+++ b/templates/main.html
@@ -5,81 +5,105 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>DOCUMENT</title>
+    <title>WebsiteName</title>
     <!-- Mumble UI -->
     <link rel="stylesheet" href="{% static 'uikit/styles/uikit.css' %}" />
 
     <!-- Bootstarp 3-->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+    <link
+      rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css"
+    />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-    <link rel="stylesheet" href="{% static 'styles/app.css' %}">
+    <link rel="stylesheet" href="{% static 'styles/app.css' %}" />
 
     <!-- Icon - IconMonster -->
-    <link rel="stylesheet" href="https://cdn.iconmonstr.com/1.3.0/css/iconmonstr-iconic-font.min.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.iconmonstr.com/1.3.0/css/iconmonstr-iconic-font.min.css"
+    />
   </head>
   <body>
-    {% include 'navbar.html' %} 
-    {% block content %} 
-    {% endblock content %} 
-    {% include 'footer.html' %}
+    {% include 'navbar.html' %} {% block content %} {% endblock content %} {%
+    include 'footer.html' %}
     <div id="myModal" class="modal fade" role="dialog">
       <div class="modal-dialog">
-    
         <!-- Modal content-->
         <div class="modal-content">
           <div class="modal-header">
-            <button type="button" class="close" data-dismiss="modal">&times;</button>
+            <button type="button" class="close" data-dismiss="modal">
+              &times;
+            </button>
             <h4 class="modal-title">Comanda plasa cu success!</h4>
           </div>
           <div class="modal-body">
-            <p>Vei primi in curand un email de confirmare a comenzii impreuna cu factura virtuala.</p>
-            <p>De asemenea factura poate fi descarcata de 
-                  <span id="download-bill-btn" style="text-decoration: underline;color: rgb(35, 35, 243);cursor: pointer;" > aici</span>
-              .</p>
+            <p>
+              Vei primi in curand un email de confirmare a comenzii impreuna cu
+              factura virtuala.
+            </p>
+            <p>
+              De asemenea factura poate fi descarcata de
+              <span
+                id="download-bill-btn"
+                style="
+                  text-decoration: underline;
+                  color: rgb(35, 35, 243);
+                  cursor: pointer;
+                "
+              >
+                aici</span
+              >
+              .
+            </p>
           </div>
           <div class="modal-footer">
-            <button type="button" class="btn btn-default" data-dismiss="modal" id="closeModal">Inchide</button>
+            <button
+              type="button"
+              class="btn btn-default"
+              data-dismiss="modal"
+              id="closeModal"
+            >
+              Inchide
+            </button>
           </div>
         </div>
-    
       </div>
     </div>
     <script src="../static/js/javascript.js"></script>
     <script>
-      
-    const numberOfProducts = '{{numberOfProducts}}'
-    // const badge = document.querySelector('.badge')
-    if (numberOfProducts > 0)
-      badge.textContent = numberOfProducts
+      const numberOfProducts = "{{numberOfProducts}}";
+      // const badge = document.querySelector('.badge')
+      if (numberOfProducts > 0) badge.textContent = numberOfProducts;
 
-    const sendProducts=function(market){
-      $.ajax({
-            type: "POST",
-            url: '/getProductsFromJS',
-            data: {
-                "market": market,
-                'csrfmiddlewaretoken': '{{ csrf_token }}',
-            },
-            dataType: "json",
+      const sendProducts = function (market) {
+        $.ajax({
+          type: "POST",
+          url: "/getProductsFromJS",
+          data: {
+            market: market,
+            csrfmiddlewaretoken: "{{ csrf_token }}",
+          },
+          dataType: "json",
         });
-    }
+      };
 
-    const updateProducts=function(market){
-      $.ajax({
-            type: "POST",
-            url: '/deleteProductsFromJS',
-            data: {
-                "market": market,
-                'csrfmiddlewaretoken': '{{ csrf_token }}',
-            },
-            dataType: "json",
+      const updateProducts = function (market) {
+        $.ajax({
+          type: "POST",
+          url: "/deleteProductsFromJS",
+          data: {
+            market: market,
+            csrfmiddlewaretoken: "{{ csrf_token }}",
+          },
+          dataType: "json",
         });
-    }
-
+      };
     </script>
-    
-    <script src="https://kit.fontawesome.com/5a450054d9.js" crossorigin="anonymous"></script>
-    
+
+    <script
+      src="https://kit.fontawesome.com/5a450054d9.js"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
