--- a/templates/main.html
+++ b/templates/main.html
@@ -25,8 +25,9 @@
     />
   </head>
   <body>
-    {% include 'navbar.html' %} {% block content %} {% endblock content %} {%
-    include 'footer.html' %}
+    {% include 'navbar.html' %} 
+    {% block content %} {% endblock content %} 
+    {% include 'footer.html' %}
     <div id="myModal" class="modal fade" role="dialog">
       <div class="modal-dialog">
         <!-- Modal content-->
